SimpleComplex/Utils 2.x, 2018-10-01
-----------------------------------
- CliCommand toString shan't err on exceptionally long option name.
- Unicode::toLowerCase (Doh).
- Release 1.9.4.

SimpleComplex/Utils 2.x, 2018-09-23
-----------------------------------
- Bootstrap error handler shan't exit on mere PHP notice.
- Release 1.9.2.

SimpleComplex/Utils 2.x, 2018-09-22
-----------------------------------
- TimeIntervalConstant::totalMonths.
- Release 1.9.1.

SimpleComplex/Utils 1.x, 2018-09-19
-----------------------------------
- Release 1.9.

SimpleComplex/Utils 1.x, 2018-09-16
-----------------------------------
- TimeIntervalConstant totalMinutes, totalSeconds didn't include days and hours.
- Utils::classUnqualified() is now a static method.

SimpleComplex/Utils 1.x, 2018-08-12
-----------------------------------
- phpunit TestHelper method for circumventing phpunit's propensity to consume
  all exceptions.
- Release 1.8.1.

SimpleComplex/Utils 1.x, 2018-08-11
-----------------------------------
- Utils bitmask feature reduced to single method.

SimpleComplex/Utils 1.x, 2018-08-07
-----------------------------------
- Bootstrap methods for setting exception and error handlers.
- Utils bitmask methods.

SimpleComplex/Utils 1.x, 2018-07-29
-----------------------------------
- CLI environment use .ini file for registering/loading
  command providers.
- Release 1.8.

SimpleComplex/Utils 1.x, 2018-07-22
-----------------------------------
- CliEnvironment expose vendorDir property.

SimpleComplex/Utils 1.x, 2018-07-21
-----------------------------------
- CLI command provider hook; declare qualified class names
  of CliCommandInterface implementations
  in file [doc_root]/.utils_cli_command_providers.

SimpleComplex/Utils 1.x, 2018-07-20
-----------------------------------
- CliCommand support longer command name than visual 'midLine'.

SimpleComplex/Utils 1.x, 2018-06-30
-----------------------------------